--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #1d4ed8;
-  --color-secondary: #9333ea;
+  --color-dark-navy: #05071e;
+  --color-navy-blue: #000080;
+  --color-deep-blue: #111a89;
+  --color-light-blue: #4169e1;
+  --font-family-Poppins: "Poppins", sans-serif;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.nav-bar-clip-path {
+  clip-path: circle(100px at 90% -20%);
+  -webkit-clip-path: circle(100px at 90% -20%);
+  transition: all 1.4s ease-out;
+  pointer-events: none;
+}
+
+.nav-bar-clip-path.open {
+  clip-path: circle(2000px at 90% -10%);
+  -webkit-clip-path: circle(2000px at 90% -10%);
+  pointer-events: all;
 }
